# pips-solver

./: 2025-10-26.json  CMakeLists.txt  README.md  justfile
data/: pips.json
src/: display.cpp  display.hpp  main.cpp  pips_data.cpp  pips_data.hpp  pips_game.cpp  pips_game.hpp  solver.cpp  solver.hpp
